Contract Configurator 1.2.3
- Fixed null reference issue in dead contract types (thanks DMagic).

Contract Configurator 1.2.2
- New UnlockTech behaviour (thanks Klefenz).
- Added support for specifying science by subject in CollectScience.
- Added CelestialBody.SemiMajorAxis() expression method.
- Fixes to VesselDestroyed (thanks tito13kfm).
- Fixes to contracts failing unexpectedly (thanks Recon777).  Affects RemoteTech Contract Pack.
- Fixed issues with CollectScience location (thanks severedsolo).
- Fixed issue with ContractGroup max checks not working correctly for parent contract groups.
- Fixed CollectScience to display correct experiment name.
- Minor bug fixes.

Contract Configurator 1.2.1
- CompleteContract requirement now checks on active contracts too.
- Improved transfer of parameters from Kerbal => Vessel => Vessel, such as PlantFlag in an Apollo-style mission (thanks jordanjay29).
- Fixed possible exception on contract save.
- Fixed exception with WaypointGenerator for contracts using random waypoint names (thanks Galenmacil).
- Fixed CollectScience NRE issue (thanks severedsolo).
- Fixed orientation/height of spawned kerbals (thanks AlphaAsh).
- Fixed orientation/height of vessels built in the SPH.
- Fixed issue with HasCrew not checking traits properly when translation mods installed (thanks dureiken).

Contract Configurator 1.2.0
- Reduced ratio of stock vs. contract configurator contracts further to favor non-contract configurator a little more.
- Support in CollectScience for multiple experiments.
- Added activeUniqueValue flag for DATA nodes to check unique values for active/offered contracts only.
- Misc new functions for science expressions.
- Lots of fixes to science expression internals.
- Improved error handling for contract generation failures.
- Fixed uniqueValue in DATA nodes to work with Vessels.
- Fixed issue where ContractComplete throws errors if the related contract didn't load.